packages/vue/src/components/Collapse.module.scss
.collapse {
    transition:
        height 0.2s ease-out,
        opacity 0.2s ease-out 0.1s;
    box-sizing: content-box;
}

.active {
    // forces hardware acceleration
    will-change: height;
    transform: translateZ(0);
    backface-visibility: hidden;
    perspective: 1000px;
}

.fadeOut {
    opacity: 0 !important;
}

.fadeIn {
    opacity: 1;
}

